# clinic

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/cli/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts
apps/cli/src/: index.ts
apps/desktop-app/: package.json  vite.config.ts
apps/desktop-app/src/: App.tsx
apps/desktop-app/src-tauri/: Cargo.toml  TESTING.md  tauri.conf.json
apps/desktop-app/src-tauri/capabilities/: default.json
apps/desktop-app/src-tauri/icons/: icon.icns
apps/desktop-app/src-tauri/src/: lib.rs  relay.rs  types.rs
apps/desktop-app/src/components/icons/: CheckBoxIcon.tsx  CheckIcon.tsx  CodeIcon.tsx  (+10 more)
apps/desktop-app/src/layouts/: AppLayout.tsx
apps/desktop-app/src/styles/: global.scss
apps/desktop-app/src/types/: API.types.ts
apps/desktop-app/src/utils/: cn.ts  constants.ts  curlParser.ts  requestUtils.ts  secrets.ts  shortCuts.ts  urlParser.ts
apps/server/: package.json  tsconfig.json  wrangler.jsonc
apps/server/src/: index.ts  server.ts
apps/server/src/controllers/: relay.controller.ts
apps/server/src/routes/: start.route.ts
apps/server/src/utils/: server.ts
apps/web-app/: Caddyfile  global.d.ts  next.config.ts  package.json
apps/web-app/src/app/: layout.tsx  page.tsx
apps/web-app/src/lib/: analytics.ts
apps/web-app/src/providers/: PostHogProvider.tsx
apps/web-app/src/types/: API.types.ts
apps/web-app/src/utils/: auth.ts  constants.ts  curlParser.ts  layout.ts  requestUtils.ts  secrets.ts  shortCuts.ts
apps/web-app/tests/: curl-parser.test.ts
(+137 files in other folders)
