[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
url = "2.5"
once_cell = "1.19"
# HTTP client with custom timing
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "native-tokio"] }
http-body-util = "0.1"
# DNS resolver for timing
hickory-resolver = "0.24"
# Service/middleware
tower = { version = "0.5", features = ["util"] }
pin-project = "1.0"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
axum = "0.7"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing-subscriber = "0.3"

